Feat: Decentralised CCD and General Config (#82)
* feat: db connectivity and spring packages

* feat: cft lib packages/config

* feat: add flyway + config

* feat: enable db migration in Jenkinsfile_CNP

* Bumping chart version/ fixing aliases

* chore: move everything to `pt` directory instead of `demo`

* chore: change java version to 21 gh actions

* chore: resolve checkstyle issues

* feat: auto gen db upon startup if not exists

* chore: rename env var in .env

* feat: idam setup and cftlib config for local

* feat: high level data setup config

* feat: update security config add more to build.gradle

* fix: case type config

* chore: update dep supressions

* fix: processIntegrationTestResources duplicates strategy error

* fix: integration test flyway error

* feat: add tests for ccd + idam setup

* feat: add tests for ccd event

* chore: styling (line too long)

* feat: tests for access coverage

* feat: move to decentralized and add required view

* chore: cleanup pt case class

* chore: upgrade springframework

* chore: upgrade dependencies

* fix: remove csrf disable

* fix: revert suppressions to master

* feat: update chart getting kv values

* fix: broken test - remove unused

* HDPD-522: add JPA layer for PTCase and unit tests

* HDPD:522: fix checkstyle

* HDPD-522: folder structure amendments

* fix: revert dep upgrades

* fix: suppress elastic search cve for now

* chore: bump chart

* fix: disable elasticsearch health

* chore: remove `smokeTest` and update test configuration

* chore: update Jenkinsfile and build.gradle with Serenity setup

* chore: clean up unused smoke test hooks in Jenkinsfile

* revert: add smoke test back- revert changes

* Bumping chart version/ fixing aliases

* fix: functional test now returns 401 (since we have auth)

* chore: add default values for DB username and password in application.yaml

* chore: refactor sourceSet configuration for functional and integration tests

* chore: revert previous commit

* chore: cleanu